--- a/app-pda/gnome-pilot-conduits/ChangeLog
+++ b/app-pda/gnome-pilot-conduits/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-pda/gnome-pilot-conduits
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-pda/cvs-repo/gentoo-x86/app-pda/gnome-pilot-conduits/ChangeLog,v 1.39 2011/02/23 22:40:06 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-pda/cvs-repo/gentoo-x86/app-pda/gnome-pilot-conduits/ChangeLog,v 1.40 2011/02/24 18:36:12 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org>
+  gnome-pilot-conduits-2.32.1.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   gnome-pilot-conduits-2.32.1.ebuild:
