--- a/gnome-base/gnome-desktop/ChangeLog
+++ b/gnome-base/gnome-desktop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-desktop
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.290 2011/02/23 22:50:33 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.291 2011/02/24 18:57:44 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> gnome-desktop-2.32.1.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   gnome-desktop-2.32.1.ebuild:
