--- a/gnome-base/libgnomekbd/ChangeLog
+++ b/gnome-base/libgnomekbd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libgnomekbd
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.85 2011/02/23 22:53:50 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.86 2011/02/24 19:20:02 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> libgnomekbd-2.32.0.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libgnomekbd-2.32.0.ebuild:
   Stable on amd64 wrt bug #353436
