--- a/gnome-extra/bug-buddy/ChangeLog
+++ b/gnome-extra/bug-buddy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/bug-buddy
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/bug-buddy/ChangeLog,v 1.190 2011/02/23 22:55:02 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/bug-buddy/ChangeLog,v 1.191 2011/02/24 19:23:26 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> bug-buddy-2.32.0-r2.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   bug-buddy-2.32.0-r2.ebuild:
