--- a/gnome-extra/evolution-exchange/ChangeLog
+++ b/gnome-extra/evolution-exchange/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/evolution-exchange
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/evolution-exchange/ChangeLog,v 1.131 2011/02/23 22:55:48 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/evolution-exchange/ChangeLog,v 1.132 2011/02/24 19:26:49 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org>
+  evolution-exchange-2.32.2.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   evolution-exchange-2.32.2.ebuild:
