--- a/gnome-extra/gconf-editor/ChangeLog
+++ b/gnome-extra/gconf-editor/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gconf-editor
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gconf-editor/ChangeLog,v 1.170 2011/02/23 22:56:34 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gconf-editor/ChangeLog,v 1.171 2011/02/24 19:29:35 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> gconf-editor-2.32.0.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   gconf-editor-2.32.0.ebuild:
