--- a/gnome-extra/gnome-user-docs/ChangeLog
+++ b/gnome-extra/gnome-user-docs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gnome-user-docs
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-user-docs/ChangeLog,v 1.50 2011/02/23 22:57:23 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-user-docs/ChangeLog,v 1.51 2011/02/24 20:13:47 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> gnome-user-docs-2.32.0.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   gnome-user-docs-2.32.0.ebuild:
