--- a/gnome-extra/libgsf/ChangeLog
+++ b/gnome-extra/libgsf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/libgsf
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/libgsf/ChangeLog,v 1.167 2011/02/23 23:04:10 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/libgsf/ChangeLog,v 1.168 2011/02/24 20:29:41 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> libgsf-1.14.19.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libgsf-1.14.19.ebuild:
   Stable on amd64 wrt bug #353436
