--- a/media-libs/libgphoto2/ChangeLog
+++ b/media-libs/libgphoto2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libgphoto2
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.184 2011/02/23 23:07:05 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.185 2011/02/24 20:35:34 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> libgphoto2-2.4.10.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libgphoto2-2.4.10.ebuild:
   Stable on amd64 wrt bug #353436
