--- a/media-video/totem/ChangeLog
+++ b/media-video/totem/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/totem
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/totem/ChangeLog,v 1.311 2011/02/23 23:07:56 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/totem/ChangeLog,v 1.312 2011/02/24 20:37:26 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> totem-2.32.0.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> totem-2.32.0.ebuild:
   Stable on amd64 wrt bug #353436
