--- a/net-analyzer/gnome-nettool/ChangeLog
+++ b/net-analyzer/gnome-nettool/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/gnome-nettool
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/gnome-nettool/ChangeLog,v 1.109 2011/02/23 23:08:11 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/gnome-nettool/ChangeLog,v 1.110 2011/02/24 20:38:07 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> gnome-nettool-2.32.0.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   gnome-nettool-2.32.0.ebuild:
