--- a/net-analyzer/netspeed_applet/ChangeLog
+++ b/net-analyzer/netspeed_applet/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/netspeed_applet
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/netspeed_applet/ChangeLog,v 1.32 2011/02/23 23:08:24 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/netspeed_applet/ChangeLog,v 1.33 2011/02/24 20:38:27 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> netspeed_applet-0.16.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   netspeed_applet-0.16.ebuild:
