--- a/net-im/empathy/ChangeLog
+++ b/net-im/empathy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/empathy
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/empathy/ChangeLog,v 1.73 2011/02/23 23:08:39 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/empathy/ChangeLog,v 1.74 2011/02/24 20:38:54 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> empathy-2.32.2.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> empathy-2.32.2.ebuild:
   Stable on amd64 wrt bug #353436
