--- a/net-misc/vino/ChangeLog
+++ b/net-misc/vino/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/vino
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/vino/ChangeLog,v 1.156 2011/02/23 23:10:05 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/vino/ChangeLog,v 1.157 2011/02/24 20:40:51 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> vino-2.32.1.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> vino-2.32.1.ebuild:
   Stable on amd64 wrt bug #353436
