--- a/x11-libs/gdk-pixbuf/ChangeLog
+++ b/x11-libs/gdk-pixbuf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gdk-pixbuf
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/gdk-pixbuf/ChangeLog,v 1.5 2011/02/23 23:13:13 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/gdk-pixbuf/ChangeLog,v 1.6 2011/02/24 20:43:33 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> gdk-pixbuf-2.22.1.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> gdk-pixbuf-2.22.1.ebuild:
   Stable on amd64 wrt bug #353436
