--- a/x11-themes/gnome-icon-theme-extras/ChangeLog
+++ b/x11-themes/gnome-icon-theme-extras/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gnome-icon-theme-extras
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gnome-icon-theme-extras/ChangeLog,v 1.3 2011/02/23 23:14:29 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gnome-icon-theme-extras/ChangeLog,v 1.4 2011/02/24 20:45:54 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org>
+  gnome-icon-theme-extras-2.30.1.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   gnome-icon-theme-extras-2.30.1.ebuild:
