--- a/x11-libs/goffice/ChangeLog
+++ b/x11-libs/goffice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/goffice
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/goffice/ChangeLog,v 1.85 2011/02/23 23:16:58 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/goffice/ChangeLog,v 1.86 2011/02/24 20:50:11 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> goffice-0.8.13.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> goffice-0.8.13.ebuild:
   Stable on amd64 wrt bug #353436
