--- a/dev-cpp/atkmm/ChangeLog
+++ b/dev-cpp/atkmm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/atkmm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/atkmm/ChangeLog,v 1.6 2011/02/23 23:17:13 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/atkmm/ChangeLog,v 1.7 2011/02/24 20:50:42 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> atkmm-2.22.2.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> atkmm-2.22.2.ebuild:
   Stable on amd64 wrt bug #353436
