--- a/app-accessibility/java-access-bridge/ChangeLog
+++ b/app-accessibility/java-access-bridge/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/java-access-bridge
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/java-access-bridge/ChangeLog,v 1.46 2011/02/23 23:18:36 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/java-access-bridge/ChangeLog,v 1.47 2011/02/24 20:53:21 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org>
+  java-access-bridge-1.26.0.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   java-access-bridge-1.26.0.ebuild:
