--- a/gnome-extra/at-spi/ChangeLog
+++ b/gnome-extra/at-spi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/at-spi
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/at-spi/ChangeLog,v 1.217 2011/02/23 23:19:24 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/at-spi/ChangeLog,v 1.218 2011/02/24 20:54:47 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> at-spi-1.32.0.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> at-spi-1.32.0.ebuild:
   Stable on amd64 wrt bug #353436
