--- a/net-im/telepathy-logger/ChangeLog
+++ b/net-im/telepathy-logger/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/telepathy-logger
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.6 2011/02/23 23:20:41 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.7 2011/02/24 20:57:17 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> telepathy-logger-0.1.7.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   telepathy-logger-0.1.7.ebuild:
