--- a/net-im/telepathy-mission-control/ChangeLog
+++ b/net-im/telepathy-mission-control/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/telepathy-mission-control
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.39 2011/02/23 23:20:57 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.40 2011/02/24 20:57:52 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org>
+  telepathy-mission-control-5.6.1.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   telepathy-mission-control-5.6.1.ebuild:
