--- a/media-libs/clutter/ChangeLog
+++ b/media-libs/clutter/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/clutter
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/clutter/ChangeLog,v 1.23 2011/02/23 23:23:08 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/clutter/ChangeLog,v 1.24 2011/02/24 21:02:17 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> clutter-1.2.14.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> clutter-1.2.14.ebuild:
   Stable on amd64 wrt bug #353436
