--- a/net-ftp/lftp/ChangeLog
+++ b/net-ftp/lftp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-ftp/lftp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.290 2011/02/22 17:32:31 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.291 2011/02/25 17:19:33 jer Exp $
+
+  25 Feb 2011; Jeroen Roovers <jer@gentoo.org> lftp-4.1.3.ebuild:
+  Stable for HPPA (bug #355921).
 
   22 Feb 2011; Markos Chandras <hwoarang@gentoo.org> lftp-4.1.3.ebuild:
   Stable on amd64 wrt bug #355921
