--- a/dev-ruby/test_declarative/ChangeLog
+++ b/dev-ruby/test_declarative/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/test_declarative
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/test_declarative/ChangeLog,v 1.1 2011/02/20 14:42:19 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/test_declarative/ChangeLog,v 1.2 2011/02/25 17:21:08 jer Exp $
+
+  25 Feb 2011; Jeroen Roovers <jer@gentoo.org> test_declarative-0.0.5.ebuild:
+  Marked ~hppa (bug #355697).
 
 *test_declarative-0.0.5 (20 Feb 2011)
 
