--- a/app-admin/testdisk/ChangeLog
+++ b/app-admin/testdisk/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/testdisk
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/testdisk/ChangeLog,v 1.39 2011/02/16 00:09:43 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/testdisk/ChangeLog,v 1.40 2011/02/25 18:13:56 signals Exp $
+
+  25 Feb 2011; Kevin McCarthy <signals@gentoo.org> testdisk-6.5.ebuild,
+  testdisk-6.8-r1.ebuild, testdisk-6.10.ebuild, testdisk-6.11-r1.ebuild,
+  testdisk-6.11.3.ebuild:
+  Update depends from media-libs/jpeg to virtual/jpeg
 
 *testdisk-6.11.3 (16 Feb 2011)
 
