--- a/dev-ruby/kramdown/ChangeLog
+++ b/dev-ruby/kramdown/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/kramdown
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/kramdown/ChangeLog,v 1.3 2011/01/23 09:20:02 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/kramdown/ChangeLog,v 1.4 2011/02/25 19:08:54 graaff Exp $
+
+*kramdown-0.13.2 (25 Feb 2011)
+
+  25 Feb 2011; Hans de Graaff <graaff@gentoo.org> +kramdown-0.13.2.ebuild:
+  Version bump.
 
 *kramdown-0.13.1 (23 Jan 2011)
 
