--- a/net-analyzer/ettercap/ChangeLog
+++ b/net-analyzer/ettercap/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.82 2011/01/05 13:57:24 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.83 2011/02/25 20:54:32 xarthisius Exp $
+
+  25 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
+  ettercap-0.7.3-r4.ebuild:
+  ppc64 stable wrt #347593
 
   05 Jan 2011; Markos Chandras <hwoarang@gentoo.org> ettercap-0.7.3-r4.ebuild:
   Stable on amd64 wrt bug #347593
