--- a/gnome-base/gvfs/ChangeLog
+++ b/gnome-base/gvfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gvfs
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.130 2011/01/30 18:45:16 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.131 2011/02/25 22:02:49 eva Exp $
+
+  25 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org> gvfs-1.6.6-r1.ebuild:
+  Fix build with >=glib-2.27, bug #346055.
 
   30 Jan 2011; Raúl Porcel <armin76@gentoo.org> gvfs-1.6.6-r1.ebuild:
   alpha/arm/ia64/sh/sparc stable wrt #348987
