--- a/media-tv/xbmc/ChangeLog
+++ b/media-tv/xbmc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-tv/xbmc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.82 2011/02/26 00:45:38 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.83 2011/02/26 00:50:21 vapier Exp $
+
+  26 Feb 2011; Mike Frysinger <vapier@gentoo.org> xbmc-10.0.ebuild:
+  Use internal python for release.
 
   26 Feb 2011; Mike Frysinger <vapier@gentoo.org> xbmc-10.0.ebuild,
   xbmc-9999.ebuild:
