--- a/sys-fs/ntfs3g/ChangeLog
+++ b/sys-fs/ntfs3g/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/ntfs3g
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/ntfs3g/ChangeLog,v 1.112 2011/02/02 00:01:45 chutzpah Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/ntfs3g/ChangeLog,v 1.113 2011/02/26 07:58:52 xarthisius Exp $
+
+  26 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
+  ntfs3g-2010.8.8.ebuild:
+  ppc64 stable wrt #346097
 
 *ntfs3g-2011.1.15 (01 Feb 2011)
 
