--- a/app-admin/conky/ChangeLog
+++ b/app-admin/conky/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/conky
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/conky/ChangeLog,v 1.158 2011/02/21 19:53:40 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/conky/ChangeLog,v 1.159 2011/02/26 10:02:05 xarthisius Exp $
+
+  26 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> conky-1.8.1-r2.ebuild:
+  ppc/ppc64 stable wrt #354061
 
   21 Feb 2011; Markos Chandras <hwoarang@gentoo.org> conky-1.8.1-r2.ebuild:
   Stable on amd64 wrt bug #354061
