--- a/media-plugins/gmpc-last-fm/ChangeLog
+++ b/media-plugins/gmpc-last-fm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/gmpc-last-fm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-last-fm/ChangeLog,v 1.15 2011/02/25 23:02:15 xmw Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-last-fm/ChangeLog,v 1.16 2011/02/26 12:14:07 xmw Exp $
+
+  26 Feb 2011; Michael Weber <xmw@gentoo.org> gmpc-last-fm-0.20.0.ebuild:
+  sparc dropping keywords (bug 325621)
 
   25 Feb 2011; Michael Weber <xmw@gentoo.org> gmpc-last-fm-0.20.0.ebuild:
   Added ~sparc (bug 325621)
