--- a/dev-games/openscenegraph/ChangeLog
+++ b/dev-games/openscenegraph/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/openscenegraph
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/openscenegraph/ChangeLog,v 1.35 2010/12/08 16:34:42 mr_bones_ Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/openscenegraph/ChangeLog,v 1.36 2011/02/26 13:36:17 armin76 Exp $
+
+  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> openscenegraph-2.8.3.ebuild:
+  Drop sparc keywords
 
   08 Dec 2010; Michael Sterrett <mr_bones_@gentoo.org>
   openscenegraph-2.8.3.ebuild:
