--- a/dev-libs/cryptlib/ChangeLog
+++ b/dev-libs/cryptlib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/cryptlib
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/cryptlib/ChangeLog,v 1.29 2011/02/26 10:32:38 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/cryptlib/ChangeLog,v 1.30 2011/02/26 13:37:47 arfrever Exp $
+
+  26 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -cryptlib-3.3.3-r1.ebuild:
+  Delete.
 
   26 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   cryptlib-3.4.0.ebuild:
