--- a/dev-ruby/markaby/ChangeLog
+++ b/dev-ruby/markaby/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/markaby
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/markaby/ChangeLog,v 1.23 2011/02/14 07:06:30 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/markaby/ChangeLog,v 1.24 2011/02/26 16:33:08 xarthisius Exp $
+
+  26 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> markaby-0.7.1.ebuild:
+  Marked ~ppc64 wrt #339588
 
   14 Feb 2011; Hans de Graaff <graaff@gentoo.org> markaby-0.7.1.ebuild:
   Add ree18.
