--- a/app-arch/rpm2targz/ChangeLog
+++ b/app-arch/rpm2targz/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/rpm2targz
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/rpm2targz/ChangeLog,v 1.83 2011/02/21 08:13:54 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/rpm2targz/ChangeLog,v 1.84 2011/02/26 17:44:20 armin76 Exp $
+
+  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> rpm2targz-9.0.0.4g.ebuild:
+  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #354959
 
   21 Feb 2011; Jeroen Roovers <jer@gentoo.org> rpm2targz-9.0.0.4g.ebuild:
   Stable for HPPA (bug #354959).
