--- a/media-libs/libquicktime/ChangeLog
+++ b/media-libs/libquicktime/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libquicktime
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libquicktime/ChangeLog,v 1.161 2011/02/26 10:31:21 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libquicktime/ChangeLog,v 1.162 2011/02/26 19:08:59 armin76 Exp $
+
+  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> libquicktime-1.2.2.ebuild:
+  alpha/ia64/sparc stable wrt #355449
 
   26 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   libquicktime-1.2.2.ebuild:
