--- a/sci-geosciences/grass/ChangeLog
+++ b/sci-geosciences/grass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-geosciences/grass
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-geosciences/cvs-repo/gentoo-x86/sci-geosciences/grass/ChangeLog,v 1.93 2011/02/20 23:44:24 nerdboy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-geosciences/cvs-repo/gentoo-x86/sci-geosciences/grass/ChangeLog,v 1.94 2011/02/26 21:03:51 armin76 Exp $
+
+  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> grass-6.3.0.ebuild,
+  grass-6.4.0.ebuild:
+  Drop sparc keywords
 
   20 Feb 2011; Steve Arnold <nerdboy@gentoo.org> grass-6.4.0.ebuild:
   Migrating to requested mysql virtual: dev-db/mysql -> virtual/mysql
