--- a/dev-ruby/bones/ChangeLog
+++ b/dev-ruby/bones/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/bones
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/bones/ChangeLog,v 1.13 2011/02/11 08:36:11 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/bones/ChangeLog,v 1.14 2011/02/27 09:27:12 graaff Exp $
+
+  27 Feb 2011; Hans de Graaff <graaff@gentoo.org> -bones-3.5.4.ebuild,
+  -bones-3.6.0.ebuild, -bones-3.6.2.ebuild:
+  Remove old versions.
 
 *bones-3.6.5 (11 Feb 2011)
 
