--- a/dev-db/postgresql-server/ChangeLog
+++ b/dev-db/postgresql-server/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql-server
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.106 2011/02/16 22:21:26 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.107 2011/02/27 09:56:05 klausman Exp $
+
+  27 Feb 2011; Tobias Klausmann <klausman@gentoo.org>
+  postgresql-server-8.2.20.ebuild:
+  Stable on alpha, bug #353387
 
   16 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   postgresql-server-8.2.20.ebuild, postgresql-server-8.3.14.ebuild,
