--- a/perl-core/version/ChangeLog
+++ b/perl-core/version/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for perl-core/version
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/version/ChangeLog,v 1.32 2011/01/17 07:25:23 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/version/ChangeLog,v 1.33 2011/02/27 10:42:51 grobian Exp $
+
+  27 Feb 2011; Fabian Groffen <grobian@gentoo.org> version-0.880.ebuild:
+  Add Prefix keywords, bug #351526
 
   17 Jan 2011; Torsten Veller <tove@gentoo.org> -files/0.79-assert.patch,
   -version-0.77.02.ebuild, -version-0.79-r1.ebuild, -version-0.80.ebuild,
