--- a/virtual/perl-Module-Load/ChangeLog
+++ b/virtual/perl-Module-Load/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-Module-Load
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Module-Load/ChangeLog,v 1.13 2011/02/27 10:07:22 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Module-Load/ChangeLog,v 1.14 2011/02/27 10:54:00 grobian Exp $
+
+  27 Feb 2011; Fabian Groffen <grobian@gentoo.org>
+  perl-Module-Load-0.18.ebuild:
+  Add Prefix keywords, bug #351526
 
   27 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
   perl-Module-Load-0.18.ebuild:
